# MFPlayer

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ezreal/mfplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cg.aac
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/audio/: AudioPlayer.cpp  AudioPlayer.h
app/src/main/cpp/decoder/: AudioDecoder.cpp  AudioDecoder.h  BaseDecoder.cpp  BaseDecoder.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/include/libavcodec/: avcodec.h  mediacodec.h  vdpau.h
app/src/main/cpp/include/libavutil/: hwcontext_vaapi.h
app/src/main/cpp/player/: AudioPlayer.cpp  AudioPlayer.h  Base.h  MFPlayer.cpp  MFPlayer.h  NativeWindowPlayer.cpp  NativeWindowPlayer.h
app/src/main/cpp/render/: ANativeWindowRender.cpp  ANativeWindowRender.h  AudioRender.h  AudioSLESRender.cpp  AudioSLESRender.h  VideoGLESRender.cpp  VideoGLESRender.h  VideoRender.h
app/src/main/cpp/utils/: Base.h  Utils.h
app/src/main/java/com/ezreal/mfplayer/: MFPlayer.kt  MainActivity.kt  MySurfaceView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ezreal/mfplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
